--- a/index.css
+++ b/index.css
@@ -761,7 +761,7 @@ nav.scrolled .hamburger span {
 
 /* ===== CALL TO ACTION ===== */
 .cta {
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('images/WhatsApp Image 2025-09-16 at 15.52.21_5887f98a.jpg');
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('images/student.jpg');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
